fix: card content alignment add  dropshadow imgs

--- a/src/style.css
+++ b/src/style.css
@@ -68,14 +68,14 @@ header::before {
   content: '';
   position: absolute;
   inset: -2px;
-  transform: translate(0, 4px);
+  transform: translate(0, 3px);
   background: linear-gradient(
     0.25turn,
     #2b2020 55%,
     #cf916a 92%,
     #3b2b24 97%
   );
-  filter: blur(10px);
+  filter: blur(5px);
   pointer-events: none;
 }
 
@@ -122,7 +122,7 @@ header > h2 {
   margin-top: 3rem;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   min-height: 14rem;
   font-family: 'Smythe';
   border-bottom: 3px solid #d2d2d2;
@@ -140,6 +140,7 @@ header > h2 {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  filter: drop-shadow(2px 3px #8b8b8b)
 }
 
 .card-info {
